--- a/cpu-frontend/package.json
+++ b/cpu-frontend/package.json
@@ -13,7 +13,8 @@
     "jquery": "latest",
     "lodash": "latest",
     "prop-types": "latest",
-    "classnames": "latest"
+    "classnames": "latest",
+    "js-md5": "latest"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
