add registration handling

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+
     <filter>
         <filter-name>CorsFilter</filter-name>
         <filter-class>server.filter.CORSFilter</filter-class>
